refactor: enhance RestTemplate with pooled HTTP client and improve error handling